Fix dynamic form error message spacing

--- a/src/app/features-shared/dynamic-form/dynamic-form.scss
+++ b/src/app/features-shared/dynamic-form/dynamic-form.scss
@@ -23,7 +23,3 @@
 mat-error {
   @include font-size($font-size-small);
 }
-
-mat-error.dynamic-field-error {
-  margin-top: -15px;
-}
